--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "M.Sc. Yannik Blei"
-title_separator          : "-"
+title                    : "M.Sc."
+title_separator          : " "
 name                     : &name "Yannik Blei"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
