--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : yannik-blei-9a7686155
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
