updated mini bio

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   avatar           : "profile_new.png"
   name             : "Yannik Blei"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "PhD Student in Robotics and AI"
   location         : "Nuremberg, Germany"
   employer         : "UT Nuremberg"
   uri              : # "utn.de"
