--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ author:
   bio              : "PhD Student in Robotics and AI"
   location         : "Nuremberg, Germany"
   employer         : "UT Nuremberg"
+  employer_web     : "utn.de"
   uri              : # "utn.de"
   email            : # "none@example.org" 
 
