--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "M.Sc. Yannik Blei"
+title                    : "Yannik Blei, M.Sc."
 title_separator          : " - "
 name                     : &name "Yannik Blei"
 description              : &description "personal description"
