--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ author:
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : # Username
+  youtube          : yannikblei
 
 
 # Site Settings
